--- a/2021_07_13_PEFG_PEMF.md
+++ b/2021_07_13_PEFG_PEMF.md
@@ -157,6 +157,7 @@ Vamos ver isso em gráfico que mostra por dia de coleta quanto de abudância tiv
 ggplot(p3, aes(x = Date, y = Mammalia, fill = Locality)) + 
   geom_point(aes(color = Locality), size = 4, alpha = 0.7) +
   geom_smooth(method = lm, se = TRUE) + 
+  #geom_boxplot() +
   ggtitle("Regressão linear entre a data de coleta e abundância para as Ucs") + 
   theme_classic()
 #ggsave("1.Abundancia  por data.png",width = 10, height = 6, dpi = 300)
@@ -166,12 +167,15 @@ Uma forma de ver a diferença entre as localidades é colocando em um gráfico. 
 
 Fazendo um boxplot das abundância entre as UCs fica evidente que existe uma grande diferença  o sucesso de registro.
 ```
-ggboxplot(p3, x = "Date", y = "Mammalia", color = "Locality", alpha = 0.5,
+ggboxplot(p3, x = "Locality", y = "Mammalia", color = "Locality", alpha = 0.5,
     palette = c("#ff4308", "#00AFBB"), 
     fill = "Locality", 
     order = c("PEMF", "PEFG"), 
     ylab = "Abundância", xlab = "UCs")
 ```
+Para vermos as médias é:
+
+`aggregate(Mammalia ~ Locality, p3, mean)`
 
 ### Normalidade
 Mas, pensando nas premissas, será que os dados são normais? Vamos testar isso com os seguintes pacotes.
