--- a/2021_09_21_altitude.md
+++ b/2021_09_21_altitude.md
@@ -184,8 +184,7 @@ ggplot(planilhatotal, aes(x=Altitude, y=Species)) +  #Eixos x e y
 #ggsave("boxplot1.png",width = 13, height = 5, dpi = 600)
 ```
 
-
-Agora vamos ver um gráfico marginal, vamos de pacotes:
+Agora vamos ver um gráfico marginal considerando abundância, vamos de pacotes:
 ```
 pacman::p_load(ggExtra::ggMarginal(), quietly = T) #não funciona
 pacman::p_load(ggExtra)
@@ -230,12 +229,10 @@ p4 <-planilha %>%
   labs(title = "Altitudinal distribution", subtitle = "",
        x = "Altitude", y = "Species") +  theme(ggside.panel.scale.x = 0.2, ggside.panel.scale.y = 0.2)
 plot(p4)
-#ggsave("9.Distr_Ponto_ano_Cont.png",width = 15, height = 8, dpi = 600)
+ggsave("overlap.png",width = 12, height = 8, dpi = 600)
 #geom_ysidedensity(aes(x = after_stat(density),
     #fill = Order),alpha = 0.5,size = 1, position = "stack") +
 ```
-
-
 Vamos adicionar a tabela nova:
 ```
 pacman::p_load(openxlsx) 
@@ -269,6 +266,39 @@ ggplot(dados.clip, aes(x = Shannon, y = Richness)) + #size colocar outro dado
   
 #ggsave("grupo.png",width = 9, height = 5, dpi = 600)
 ```
+### Gif
+
+pacman::p_load(gganimat,ggplot2,dplyr,gapminder,ggthemes,gifski,readr,tidyr,cargo, rustc)
+devtools::install_github('thomasp85/gganimate', force = TRUE)
+### Baxixar cargo antes
+devtools::install_github("r-rust/gifski", force = TRUE)
+#install.packages("gifski", type = "source")
+
+graph1 = p2 %>%
+  ggplot(aes(x=Altitude, y=Species, color=Order)) +
+  geom_point(alpha = 0.7, stroke = 0, size=8) +
+  theme_fivethirtyeight() +
+  scale_size(range=c(2,12), guide="none") +
+  scale_x_log10() +
+  labs(title = "Atitudinal range",
+       x = "Altitude",
+       y = "Species",
+       color = "Order",
+       caption = "Fonte: Planilahtotal") +
+  theme(axis.title = element_text(),
+        text = element_text(family = "Rubik"),
+        legend.text=element_text(size=10)) +
+  scale_color_brewer(palette = "Set2") + theme_classic()
+
+graph1.animation = graph1 +
+  transition_time(Altitude) +
+  labs(subtitle = "Altitude: {frame_time}") +
+  shadow_wake(wake_length = 0.1) 
+  
+animate(graph1.animation, height = 500, width = 800, fps = 30, duration = 20,
+        end_pause = 60, res = 100, renderer = gifski_renderer()) 
+#anim_save("11.aniamtion_faixa.gif") # ou criar em site como https://gifmaker.me/
+#anim_save("out.gif",animation = graph1.animation)
 
 
 ### Teste de correlação,olhar depois:
