--- a/2021_11_02_teofilo.md
+++ b/2021_11_02_teofilo.md
@@ -1,6 +1,6 @@
 # Apresentação
 
-Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a análise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
+Vou dividir em alguns tópicos pra gente entender melhor, certo.
 - 1. Preparar o dados;
 - 2. Correlação;
 - 3. Análise de variância;
@@ -18,15 +18,15 @@ setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2021_teofilo_otoni/R") #Mud
 #### Pacotes e entradas de arquivos
 Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecionar dados, afzer gráficos e tal.
 ```
-if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
-pacman::p_load(magrittr,dplyr) 
-pacman::p_load(ggplot2, devtools, ggrepel, graphics) 
-pacman::p_load(vegan,lubridate) 
+if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
+pacman::p_load(magrittr,dplyr,reshape2) #magrittr para operações de pipe/dplyr para manipulador de dados
+pacman::p_load(ggplot2, ggrepel, graphics,lubridate, gghighlight) #devtools, 
+pacman::p_load(vegan)  #vegan para estatística ecológica/graphics para os gráficos
 ```
 #### Caregar Planilha
 ```
 pacman::p_load(openxlsx) 
-caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/2021_teofilo_otoni/Coleta Teófilo Otoni_Outubro2021.xlsx"
+caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/2021_teofilo_otoni/2023_01_TO_2021.xlsx"
 planilhatotal <- read.xlsx(caminho.do.arquivo, #local do arquivo
                            sheet = 1, # em qual planilha estão os dados
                            colNames = T, # as colunas dos dados possuem nomes?
@@ -41,20 +41,16 @@ Vamos verificar se deu certo puxar a nossa tabela?
 
 #### Corrigir planilha
 Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar p2. 
-
-`p2 <- planilhatotal`
-
-Depois vamos selecionar os dados que queremos por coletores.
 ```
-p2 <- subset(p2,RecordedBy!="Valéria Fagundes")
-p2 <- subset(p2,RecordedBy!="Khamila")
+p2 <- planilhatotal
+
 ```
 Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
 ```
 p2 <- subset(p2, !is.na(Year))
 p2 <- subset(p2, !is.na(Order)) 
 p2 <- subset(p2, !is.na(Species))
-p2 <- subset(p2, !is.na(Altitude)) 
+#p2 <- subset(p2, !is.na(Altitude)) 
 ```
 #### Teste de plots
 Primeiro vamos configurar a data (alguns dados não tem dia e nem mês, não vai rolar).
@@ -78,85 +74,12 @@ ggplot(Date, aes(x = Date, y = Species, colour = Order)) +
   #geom_smooth(method = lm, se = TRUE) + 
   #scale_x_continuous(breaks = 0:1) +
   #scale_x_date(date_labels = "%Y %m %d") +
-  #facet_grid(Locality~.) +
+  facet_grid(Order~., scales = "free_y", space = "free_y") +
   theme_classic()
 #ggsave("1.Species/Data.png",width = 10, height = 6, dpi = 300)
 ```
 
-## Correlação
-Vamos testar a correlação dos dados.
-```
-planilhatotal %>% 
-  subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
-  cor.test(Altitude, CodSp) #correlação dos dados selecionados, numéricos
-```
-Existe correlação negativa entre altitude e espécie (p=1.02e-13)
-
-## Análise de Variância
-A Análise de Variância (ANOVA) trata-se de um método estatı́stico que permite realizar comparações simultâneas entre duas ou mais médias, ou seja, permite testar hipóteses sobre médias de distintas populações. Pressuposto: 
-- Todas as observações devem ser independentes; 
-- As observações em cada grupo devem possuir uma distribuição, aproximadamente normal; 
-- As variâncias em cada grupo devem ser aproximadamente iguais.
-
-Importante se atentar:
-- Relação de espécie (variável dependente);
-- #h0 = não variável/ F= diferença das médias /
-```
-dicalt <- lm(p2$Armadilha ~ planilhatotal$Species, data = planilhatotal) 
-anova(dicalt) 
-```
-Dando valor de p siginificativo os dados são considerados variados. Para ver com mais detalhes:
-
-`summary(dicalt)`
-
-Onde R = explicação (mais perto de 1 melhor) e p significativo, pelo menos um dos anos se comporta de forma diferente. Para as variáveis de confiança:
-
-`confint(dicalt)`
-
-E a variãncia para a assembléia de espécies:
-
-`summary(aov(p2$Altitude ~ factor(p2$Species)))`
-
-Também vamos ver a relação deles com a altitude. Primeiro os pacotes:
-```
-require(jtools,rpart,vegan)
-pacman::p_load(jtools, sandwich, lme4, ggstance)
-```
-Agora o gráfico para as espécies.
-```
-b<-glm(Day ~ Species, data = p2)
-jtools::plot_summs(b)
-plot_summs(b, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
-```
-E para as localidades:
-```
-fit <- lm(Day ~ Armadilha, data = p2) #some os primeiros de cada grupo
-summ(fit)
-effect_plot(fit, pred = Order, interval = TRUE, plot.points = TRUE) #não faz sentido
-plot_summs(fit, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
-```
-
-### Normalidade
-Teste de significância CRD (CV, Shapiro-Wilk, Homogenety, Tukey) com o pacote #Expdes - pacote de análise, normalidade, Turkey, shapiro-wilk e afins, onde as tabelas tem que ser iguais.
-```
-pacman::p_load(ExpDes, ExpDes.pt, fitdistrplus) 
-crd(p2$Species, p2$Altitude, mcomp = "tukey", sigF = 0.01, sigT = 0.01)
-```
-Não foi considerado normal,homocedástico,Tukey deu todos diferentes (ele separou as localidades, talvez usar). Vamos ver em um gráfico:
-```
-pacman::p_load(fitdistrplus) #análise de normalidade
-shapiro.test(p2$Altitude) #ho-normal / dados não normal
-descdist(p2$Altitude, boot = 500, discrete = F, graph = T) #distribuição normal
-```
-E os gráficos de QQ e outros:
-```
-fit.MF.normal <- fitdist(p2$Altitude, "norm") #gráfico de distribuição normal / Altitude distribuição normal
-plot(fit.MF.normal, demp = TRUE)
-denscomp(fit.MF.normal, addlegend=TRUE)
-#ppcomp(fit.MF.normal, addlegend=FALSE)
-#qqcomp(fit.MF.normal, addlegend=FALSE)
-```
-### 2. Acumulação
+### Acumulação
 Vamos cacular os principais índices de dievrsidade aqui. Primeiro vamos selecionar oa dados que podem ser:
 - Gerais;
 - Avifauna;
@@ -174,8 +97,8 @@ E vamos gerar a curva:
 ```
 acumplot<-specaccum(acum) #dados de acumulação
 plot(acumplot) #curva simples
-plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab="Riqueza",
-     xlab="Dias de amostragem",main="Curva de acumulação de registros",las=1,font=1.5,font.lab=1.5,cex.lab=1,cex.axis=1) #curva clássica
+plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab="Richess",
+     xlab="Samplig effort",main="Species acumulation",las=1,font=1.5,font.lab=1.5,cex.lab=1,cex.axis=1) #curva clássica
 ```
 Podemos fazer alguns tipos de gráficos de acumulação, veremos a seguir em três etapas, primeiro selecionando a tabela.
 ```
@@ -230,7 +153,7 @@ ggplot(p3, aes(x = Date, y = sp4.richness)) +
         axis.text = element_text(size = 14)) + theme_classic() 
 #ggsave("2.Acumul_álbum_count.png",width = 14, height = 6, dpi = 300)
 ```
-## 3. Estimativa de riqueza
+## Estimativa de riqueza
 Vamos também estimar a riqueza. Vamos selecionar a tabela. Podem ter duas variáveis:
 - Trilha;
 - Localidade;
@@ -243,7 +166,6 @@ Primeiro vamos foltrar e atribuir as datas:
 p2 <- Date
 ```
 
-## 2. Acumulação
 Vamos cacular os principais índices de dievrsidade aqui. Primeiro vamos selecionar oa dados que podem ser:
 - Gerais;
 - Avifauna;
@@ -252,7 +174,9 @@ Vamos cacular os principais índices de dievrsidade aqui. Primeiro vamos selecio
 Além de filtrar para apenas dados primários e espećies nativas.
 
 ```
-p3<-reshape2::dcast(Date, Date ~ Species)
+p2 <- subset(Date, !is.na(Landscape))
+
+p3<-reshape2::dcast(p2, Date ~ Species, value.var = "individualCount", fun.aggregate = sum) 
 p3=data.frame(p3, row.names=1)
 ```
 Agora vamos estimar a riqueza considerando a localidade toda:
@@ -263,7 +187,7 @@ pool
 E um gráfico:
 ```
 pool <- poolaccum(p3)
-#summary(pool, display = "chao")
+#summary(pool, display = "jack1")
 plot(pool)
 ```
 Também podemos separar pelas varíaveis seguintes:
@@ -277,14 +201,14 @@ Precisamos fazer duas tabelas.
 - Lembrar de conferir a variável
 ```
 #p3 <- subset(Data, Empresa == "XXX")
-p3<-reshape2::dcast(Date, Date + Trilha ~ Species)
-excluir <- c("Date", "Trilha")
+p3<-reshape2::dcast(Date, Date + Landscape ~ Species)
+excluir <- c("Date", "Landscape")
 p3 <- p3[,!(names(p3)%in% excluir)]
-p4<-reshape2::dcast(Date, Date + Species ~ Class)
+p4<-reshape2::dcast(Date, Date + Landscape ~ Class)
 ```
 Agora a estimativa de riqueza por localidade.
 ```
-pool<-specpool(p3, p4$Trilha) 
+pool<-specpool(p3, p4$Landscape) 
 pool
 boxplot(pool$chao) 
 ```
@@ -304,7 +228,7 @@ Agora vamos filtrar a tabela, ela pode ser por:
 - Empresa;
 - Localidade.
 ```
-local<-reshape2::dcast(p2, Trilha ~ Species)
+local<-reshape2::dcast(Date, Landscape ~ Species, value.var = "individualCount", fun.aggregate = sum)
 local=data.frame(local,row.names=1)
 ```
 E vamos aos cálculos;
@@ -318,7 +242,7 @@ invsimp <- diversity(local, "inv")
 ```
 E vamos plotar em gráfico, mas primeiro a tabela.
 ```
-local<-reshape2::dcast(p2, Vegetação ~ Espécie, value.var = "Abundancia", fun = length)
+local<-reshape2::dcast(p2, Order ~ Species, value.var = "individualCount", fun.aggregate = sum) 
 local<-data.frame(S, spAbund, shannon,J, local)
 ```
 E agora o gráfico. Lembrar de verificar:
@@ -326,8 +250,8 @@ E agora o gráfico. Lembrar de verificar:
 - No subtitle de labs.
 - No caso de família, trocar o y para S e x para Família.
 ```
-ggplot(local, aes(x = S, y = shannon)) + 
-  geom_point(aes(size=spAbund, colour = Ordem))+ 
+ggplot(local, aes(x = S, y = 1 - simp)) + 
+  geom_point(aes(size=spAbund, colour = Order))+ 
   scale_size(range = c(.1, 18), name = "Abundância") +
   geom_label_repel(aes(label = S), size=4, alpha= 0.7, #funciona no zoom
                    box.padding   = 0.35, 
@@ -341,11 +265,11 @@ ggplot(local, aes(x = S, y = shannon)) +
 ```
 Um outro exemplo de gráfico é um de barras:
 ```
-ggplot(local, aes(Vegetação)) + 
-  geom_bar(aes(weight = S, fill = shannon), alpha = 0.7) + 
-  geom_point(aes(y = S, x = Vegetação, size = spAbund)) +
-  geom_label_repel(aes(y = S, x = Vegetação, label = S), size=4, alpha= 1) +
-  geom_label(aes(y = S, x = Vegetação, label = spAbund), size=4, alpha= 1, colour = "red") +
+ggplot(local, aes(Order)) + 
+  geom_bar(aes(weight = S, fill = 1 - simp), alpha = 0.7) + 
+  geom_point(aes(y = S, x = Order, size = spAbund)) +
+  geom_label_repel(aes(y = S, x = Order, label = S), size=4, alpha= 1) +
+  geom_label(aes(y = S, x = Order, label = spAbund), size=4, alpha= 1, colour = "red") +
   labs(title="Riqueza e diversidade", subtitle="Uso e ocupação do solo", y="Riqueza", x="Família", caption="Dados primários",
        fill = "Diversidade", size = "Abundância") +
   scale_size(range = c(.1, 18), name = "Abundância") +
@@ -375,7 +299,11 @@ Fazer um cladogroma de similaridade também pode nos ajudar a desenvolver nosso 
 - Epresa.
 ```
 pacman::p_load("ade4")
-local<-reshape2::dcast(planilhatotal, Impacto ~ Espécie, value.var = "Abundancia", fun = length)
+
+p3 <- subset(p2, !is.na(Trilha))
+p3[is.na(p3)] <- 1
+
+local<-reshape2::dcast(p3, Trilha ~ Species, value.var = "individualCount", fun = length)
 local=data.frame(local, row.names=1)
 d <- dist.binary(local, method = 1, diag = FALSE, upper = FALSE) #method 1 is Jaccard index (1901) S3 coefficient of Gower & Legendre
 hc <- hclust(d)               # apply hierarchical clustering 
@@ -385,12 +313,9 @@ plot(hc, labels=local$ID)    # plot the dendrogram
 O PCA ou Análise de Componentes Principais ou PCA (Principal Component Analysis) é uma técnica de análise multivariada que pode ser usada para analisar inter-relações entre um grande número de variáveis e explicar essas variáveis em termos de suas dimensões inerentes (Componentes). O objetivo é encontrar um meio de condensar a informação contida em várias variáveis originais em um conjunto menor de variáveis estatísticas (componentes) com uma perda mínima de informação.
 Primeiro os pacotes:
 ```
-pacman::p_load(psych) 
-library("devtools") 
-library("ggbiplot") 
-library("ggrepel") 
-#install_github("vqv/ggbiplot")
+pacman::p_load(ggfortify, cluster)
 ```
+
 Agra vamos selecionar os dados.Pode ser:
 - Classe;
 - Impacto;
@@ -400,27 +325,37 @@ Outra coisa a se atentar.
 - Riqueza;
 - Abundância - add  , value.var = "Abundancia", fun.aggregate = sum).
 ```
-local<-reshape2::dcast(p2, Vegetação ~ Grupo, value.var = "Abundancia", fun.aggregate = sum)  #sem abudância para ser a riqueza/diversidade
-local[ , which(apply(local, 2, var) != 0)]
-local <- as.matrix(local[ ,-1])
-grupo<-reshape2::dcast(unique(p2), Vegetação ~ Grupo, value.var = "Abundancia", fun.aggregate = sum)
-#grupo2<-reshape2::dcast(p2, País ~ Gênero, value.var = "Abundancia", fun = length)
+p2 <- Date
+p3 <- subset(p2, !is.na(Year))
+p3 <- subset(p3, !is.na(Order)) 
+p3 <- subset(p3, !is.na(Species))
+p3 <- subset(p3, !is.na(Landscape))
+#p3 <- subset(p3, !is.na(Posição))
+#p3 <- subset(p3, Order == "Rodentia")
+
+local<-reshape2::dcast(p3, Species ~ Landscape, value.var = "individualCount", fun.aggregate = sum) #sum ou NULL
+local=data.frame(local, row.names=1)
+
+
 ```
 Agora o gráficos:
 Obs.: lembrar de ativar ggbplot  ggrepel
 ```
-wine.pca <- prcomp(local, scale. = TRUE)
-ggbiplot(wine.pca, obs.scale = 1, var.scale = 1,
-         #groups = grupo$Fator, 
-         ellipse = TRUE, circle = TRUE) +
-  geom_label_repel(aes(label = grupo$Vegetação), size=4, alpha= 1, 
-                   box.padding   = 0.35, 
-                   point.padding = 0.75,
-                   segment.color = 'grey50') +
-  scale_color_discrete(name = '') +
-  theme(legend.direction = 'horizontal', legend.position = 'top') +
-  theme_classic()
-#ggsave("12b.png",width = 6, height = 5, dpi = 600)
+pca_res <- prcomp(local, scale. = TRUE)
+#autoplot(pca_res)
+
+local<-reshape2::dcast(p3, Species + Family ~ Landscape, value.var = "individualCount", fun.aggregate = sum) #sum ou NULL
+pca <-autoplot(pca_res, data = local, colour = 'Family', label = TRUE, label.size = 4, 
+frame = TRUE, frame.type = NULL, frame.color = 'Family', #ou frame.type = 't'
+         loadings = TRUE, loadings.colour = 'blue',loadings.label = TRUE, loadings.label.size = 3) +                
+         theme_classic() 
+
+pca
+
+#ggsave(path = "/home/user/Área de Trabalho/Música", width = 20, height = 10, 
+       device = "png", filename = "2022_12_15_PCA", plot = pca)
+
+
 ```
 E os resumos:
 ```
@@ -557,4 +492,78 @@ ggplot(dados.clip, aes(x = Shannon, y = Richness)) + #size colocar outro dado
   theme_classic()
   
 #ggsave("grupo.png",width = 9, height = 5, dpi = 600)
+```
+## Correlação
+Vamos testar a correlação dos dados.
+```
+planilhatotal %>% 
+  subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
+  cor.test(Altitude, CodSp) #correlação dos dados selecionados, numéricos
+```
+Existe correlação negativa entre altitude e espécie (p=1.02e-13)
+
+
+## Análise de Variância
+A Análise de Variância (ANOVA) trata-se de um método estatı́stico que permite realizar comparações simultâneas entre duas ou mais médias, ou seja, permite testar hipóteses sobre médias de distintas populações. Pressuposto: 
+- Todas as observações devem ser independentes; 
+- As observações em cada grupo devem possuir uma distribuição, aproximadamente normal; 
+- As variâncias em cada grupo devem ser aproximadamente iguais.
+
+Importante se atentar:
+- Relação de espécie (variável dependente);
+- #h0 = não variável/ F= diferença das médias /
+```
+dicalt <- lm(p2$Species ~ p2$Armadilha, data = p2) 
+anova(dicalt) 
+```
+Dando valor de p siginificativo os dados são considerados variados. Para ver com mais detalhes:
+
+`summary(dicalt)`
+
+Onde R = explicação (mais perto de 1 melhor) e p significativo, pelo menos um dos anos se comporta de forma diferente. Para as variáveis de confiança:
+
+`confint(dicalt)`
+
+E a variãncia para a assembléia de espécies:
+
+`summary(aov(p2$Altitude ~ factor(p2$Species)))`
+
+Também vamos ver a relação deles com a altitude. Primeiro os pacotes:
+```
+require(jtools,rpart,vegan)
+pacman::p_load(jtools, sandwich, lme4, ggstance)
+```
+Agora o gráfico para as espécies.
+```
+b<-glm(Day ~ Species, data = p2)
+jtools::plot_summs(b)
+plot_summs(b, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
+```
+E para as localidades:
+```
+fit <- lm(Day ~ Armadilha, data = p2) #some os primeiros de cada grupo
+summ(fit)
+effect_plot(fit, pred = Order, interval = TRUE, plot.points = TRUE) #não faz sentido
+plot_summs(fit, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
+```
+
+### Normalidade
+Teste de significância CRD (CV, Shapiro-Wilk, Homogenety, Tukey) com o pacote #Expdes - pacote de análise, normalidade, Turkey, shapiro-wilk e afins, onde as tabelas tem que ser iguais.
+```
+pacman::p_load(ExpDes, ExpDes.pt, fitdistrplus) 
+crd(p2$Species, p2$Altitude, mcomp = "tukey", sigF = 0.01, sigT = 0.01)
+```
+Não foi considerado normal,homocedástico,Tukey deu todos diferentes (ele separou as localidades, talvez usar). Vamos ver em um gráfico:
+```
+pacman::p_load(fitdistrplus) #análise de normalidade
+shapiro.test(p2$Altitude) #ho-normal / dados não normal
+descdist(p2$Altitude, boot = 500, discrete = F, graph = T) #distribuição normal
+```
+E os gráficos de QQ e outros:
+```
+fit.MF.normal <- fitdist(p2$Altitude, "norm") #gráfico de distribuição normal / Altitude distribuição normal
+plot(fit.MF.normal, demp = TRUE)
+denscomp(fit.MF.normal, addlegend=TRUE)
+#ppcomp(fit.MF.normal, addlegend=FALSE)
+#qqcomp(fit.MF.normal, addlegend=FALSE)
 ```
