--- a/2021_09_21_altitude.md
+++ b/2021_09_21_altitude.md
@@ -12,7 +12,7 @@ Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Es
 Aqui, é importante indicar qual pasta será usada para a análise. Primeiro precisamos indicar a pasta escrevendo o caminho dela dentro do seu computador. Algo como C://usuário.... dentro das aspas. Abaixo o meu:
 ```
 getwd()
-setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2020_altitude") #Mudança de diretório para pasta do projeto
+setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2020_altitude/2021_caparaó/R") #Mudança de diretório para pasta do projeto
 ```
 
 #### Pacotes e entradas de arquivos
@@ -26,7 +26,7 @@ pacman::p_load(vegan,lubridate)
 #### Caregar Planilha
 ```
 pacman::p_load(openxlsx) 
-caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/2020_altitude/gradientealt.xlsx"
+caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/gradientealt.xlsx"
 planilhatotal <- read.xlsx(caminho.do.arquivo, #local do arquivo
                            sheet = 1, # em qual planilha estão os dados
                            colNames = T, # as colunas dos dados possuem nomes?
@@ -42,12 +42,13 @@ Vamos verificar se deu certo puxar a nossa tabela?
 #### Corrigir planilha
 Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar p2. 
 
-`p2 <- planilhatotal`
-
 Depois vamos selecionar os dados que queremos por coletores.
 ```
+p2 <- planilhatotal
+p2 <- subset(p2, !is.na(Species)) #tirar n/a da ano
+
 p2 <- subset(p2,RecordedBy!="Valéria Fagundes")
-p2 <- subset(p2,RecordedBy!="Khamila")
+p2 <- subset(p2, Locality == "PNC")
 ```
 Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
 ```
@@ -73,12 +74,14 @@ Um gráfico um pouco mais elaborado. Vamos plotar as espécies no eixo y e as al
 
 Agora o gŕafico.
 ```
-ggplot(Date, aes(x = Date, y = Species, colour = Locality)) + 
-  geom_point(size = 6, alpha = 0.7) +
-  #geom_smooth(method = lm, se = TRUE) + 
-  #scale_x_continuous(breaks = 0:1) +
-  #scale_x_date(date_labels = "%Y %m %d") +
-  #facet_grid(Locality~.) +
+pacman::p_load(ggside, stringr) 
+
+ggplot(p2, aes(x = Altitude, y = CodSp, colour = RecordedBy)) + 
+  geom_jitter(size = 6, alpha = 0.4) +
+  geom_violin(aes (Colour = Species), orientation = "y", alpha = 0.5) + 
+  #geom_xsidedensity(aes(y = after_stat(scaled), group = RecordedBy, fill = RecordedBy),alpha = 0.5, size = 2, position = "stack", outline.type = "full") + 
+  geom_xsideboxplot(aes(fill = RecordedBy),alpha = 0.5, orientation = "y") +
+  #facet_grid(Order~., scales = "free_y", space = "free_y") +
   theme_classic()
 #ggsave("1.Species/Data.png",width = 10, height = 6, dpi = 300)
 ```
@@ -88,7 +91,7 @@ Vamos testar a correlação dos dados.
 ```
 planilhatotal %>% 
   subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
-  cor.test(Altitude, CodSp) #correlação dos dados selecionados, numéricos
+  cor.test(Altitude, Year) #correlação dos dados selecionados, numéricos
 ```
 Existe correlação negativa entre altitude e espécie (p=1.02e-13)
 
@@ -102,7 +105,7 @@ Importante se atentar:
 - Relação de espécie (variável dependente);
 - #h0 = não variável/ F= diferença das médias / a variação de altitude média por espécie é de 1310m
 ```
-dicalt <- lm(p2$Altitude ~ planilhatotal$Species, data = planilhatotal) 
+dicalt <- lm(p2$Altitude ~ p2$RecordedBy, data = p2) 
 anova(dicalt) 
 ```
 Dando valor de p siginificativo os dados são considerados variados. Para ver com mais detalhes:
@@ -156,6 +159,47 @@ denscomp(fit.MF.normal, addlegend=TRUE)
 #ppcomp(fit.MF.normal, addlegend=FALSE)
 #qqcomp(fit.MF.normal, addlegend=FALSE)
 ```
+
+Krustal
+
+kruskal.test(Altitude~RecordedBy, data = p2)       
+
+g1 <- p2 %>% 
+  mutate(RecordedBy = as.factor(RecordedBy)) %>% 
+  ggplot() +
+  geom_boxplot(aes(y = Altitude, x = RecordedBy)) +
+  labs(x = 'RecordedBy', y = 'Altitude', 
+       title = 'Boxplot de consumo') + theme_classic()
+       
+g1 
+Fazer com as classes
+
+pairwise.wilcox.test(p3$Altitude,
+                          p3$Altitude,
+                          p.adjust.method="bonferroni")
+
+pacman::p_load("ade4")
+
+local<-reshape2::dcast(p2, Altitude ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
+local=data.frame(local, row.names=1)
+#local$binário<-ifelse(local>1, 1, 0)
+#localb=as.data.frame(local$binário)
+
+S <- specnumber(local)
+localb<-data.frame(S, local) 
+
+#local <- local %>%   subset(S > 4)
+
+d <- dist.binary(localb, method = 1, diag = FALSE, upper = FALSE) 
+#method 1 is Jaccard index (1901) S3 coefficient of Gower & Legendre
+hc <- hclust(d)               # apply hierarchical clustering 
+#par(mgp=c(1,1,0)) #exportar a imagem
+#png(filename="/home/user/Área de Trabalho/Música/5.clust_gen_pais.png",width=800,height=600) #local e tmamanho
+plot(hc, labels=localb$Altitude)    # plot the dendrogram
+#dev.off()
+
+
+
 ### Diversidade + Acumulação
 Fazer
 
@@ -179,7 +223,11 @@ ggplot(p2, aes(x=Locality, y=Altitude, color=Data)) +  #Eixos x e y
 E sua abrangência por espécies:
 ```
 ggplot(planilhatotal, aes(x=Altitude, y=Species)) +  #Eixos x e y
-  geom_boxplot(aes(colour=Order)) + theme_classic()  #+geom_smooth(method = lm, se = TRUE)
+  geom_boxplot(aes(colour=Order)) +
+  #geom_xsidedensity(aes(fill = Order, y = after_stat(count)), position = "stack") +
+  geom_xsidedensity(aes(y = after_stat(count/max(count)*5), group = Order, fill = Order),alpha = 0.5, size = 1, position = "stack") + 
+  theme_classic()  
+  #+geom_smooth(method = lm, se = TRUE)
 
 #ggsave("boxplot1.png",width = 13, height = 5, dpi = 600)
 ```
@@ -229,7 +277,7 @@ p4 <-planilha %>%
   labs(title = "Altitudinal distribution", subtitle = "",
        x = "Altitude", y = "Species") +  theme(ggside.panel.scale.x = 0.2, ggside.panel.scale.y = 0.2)
 plot(p4)
-ggsave("overlap.png",width = 12, height = 8, dpi = 600)
+#ggsave("overlap.png",width = 12, height = 8, dpi = 600)
 #geom_ysidedensity(aes(x = after_stat(density),
     #fill = Order),alpha = 0.5,size = 1, position = "stack") +
 ```
