--- a/2023_06_jaiany.md
+++ b/2023_06_jaiany.md
@@ -49,7 +49,7 @@ p2 <- planilhatotal
 ```
 Aqui tiramos as células NA ou vazias e estabelecemos data.
 ```
-p2 <- subset(p2, !is.na(Base))
+p2 <- subset(p2, !is.na(Categoria))
 
 p3 <- p2 %>% 
   select(Ano,Mês,Dia) %>% 
@@ -69,7 +69,7 @@ pacman::p_load(fitdistrplus)
 Teste de normalidade por coluna para ver se a variável segue essa distribuição. Tanto para o experimento 1 quanto para o experimento 2.
 
 ```
-p3 <- subset(p2, Experimento == "2")
+p3 <- subset(p2, Experimento == "SM")
 
 fit.MF.normal <- fitdist(p3$Consumo, "norm") #gráfico de distribuição normal
 plot(fit.MF.normal)
@@ -86,7 +86,7 @@ ggplot(p2, aes(sample=Consumo, colour = Colonia)) +
 ```
 Para garantir é fazendo um teste de Shapiro Wilk.  Para dizer que uma distribuição é normal, o valor p precisa ser maior do que 0,05.
 ```
-p3 <- subset(p2, Experimento == "2")
+p3 <- subset(p2, Experimento == "SM")
 
 shapiro.test(p3$Consumo) 
 ```
@@ -152,6 +152,24 @@ Agora vamos ver se há diferenças significativas por colônias.
 p3 <- subset(p2, Experimento == "2")
 
 kruskal.test(Consumo~Colonia, data = p3)       
+```
+E um gráfico só para as categorias do segundo experimeto.
+```
+p3 <- subset(p2, Experimento == "SM")
+
+kruskal.test(Consumo~Categoria, data = p3)       
+
+g1 <- p3 %>% 
+  mutate(Experimento = as.factor(Categoria)) %>% 
+  ggplot() +
+  geom_boxplot(aes(y = Consumo, x = Categoria)) +
+  labs(x = 'Tratamento', y = 'Consumo', 
+       title = 'Boxplot de consumo') + theme_classic()
+       
+g1 
+
+ggsave(, width = 20, height = 10, device = "tiff", filename = "veg", plot = g1)
+
 ```
 Vamos ver o resultado. Para o experimento 1 não houve diferença estatística entre as colonias.
 
