--- a/2021_09_21_altitude.md
+++ b/2021_09_21_altitude.md
@@ -2,6 +2,11 @@
 
 Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Espero que curta tanto a análise quanto o programa. Vou dividir em alguns tópicos pra gente entender melhor, certo.
 - 1. Preparar o dados;
+Daepois os capítuloa.
+- Cap. 1: Gráfico
+- Cap. 1: Cluster
+- Cap. 1: Gráfico diversidade
+
 - 2. Correlação;
 - 3. Análise de variância;
 - 4. Diversidades das UCs;
@@ -12,16 +17,20 @@ Tudo bem, Tarsila. Aqui vai um script detalhado do que vamos fazer, certinho. Es
 Aqui, é importante indicar qual pasta será usada para a análise. Primeiro precisamos indicar a pasta escrevendo o caminho dela dentro do seu computador. Algo como C://usuário.... dentro das aspas. Abaixo o meu:
 ```
 getwd()
-setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2020_altitude/2021_caparaó/R") #Mudança de diretório para pasta do projeto
+setwd("/home/user/Área de Trabalho/Bio/projeto_publ/2020_altitude/2023_cap1") #Mudança de diretório para pasta do projeto
 ```
 
 #### Pacotes e entradas de arquivos
 Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecionar dados, afzer gráficos e tal.
 ```
-if(!require(pacman, quietly = TRUE))(install.packages("pacman")) 
-pacman::p_load(magrittr,dplyr) 
-pacman::p_load(ggplot2, devtools, ggrepel, graphics) 
-pacman::p_load(vegan,lubridate) 
+if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
+#if(!require(devtools, quietly = TRUE))(install.packages("devtools")) #agrupador de dados
+pacman::p_load(magrittr,dplyr,reshape2) #magrittr para operações de pipe/dplyr para manipulador de dados
+pacman::p_load(ggplot2, ggrepel, graphics, lubridate, tidyquant, tidyverse, tidygraph, patchwork) 
+pacman::p_load(vegan)  #vegan para estatística ecológica/graphics para os gráficos
+pacman::p_load(forcats,iNEXT,tidyr,tibble,iNEXT) #hill,CRAN e riqueza estimada
+
+#pacman::p_load(tidyverse)
 ```
 #### Caregar Planilha
 ```
@@ -45,17 +54,19 @@ Aqui vamos selecionar os dados. Primeiro vamos atribuir nossa tabela e denominar
 Depois vamos selecionar os dados que queremos por coletores.
 ```
 p2 <- planilhatotal
-p2 <- subset(p2, !is.na(Species)) #tirar n/a da ano
-
-p2 <- subset(p2,RecordedBy!="Valéria Fagundes")
-p2 <- subset(p2, Locality == "PNC")
-```
-Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
-```
+p2 <- subset(p2, !is.na(Day))
 p2 <- subset(p2, !is.na(Year))
 p2 <- subset(p2, !is.na(Order)) 
 p2 <- subset(p2, !is.na(Species))
 p2 <- subset(p2, !is.na(Altitude)) 
+p2 <- subset(p2, R == "y")
+
+#p2 <- subset(p2,RecordedBy!="Valéria Fagundes")
+#p2 <- subset(p2, Locality == "PNC")
+#p2 <- subset(p2, RecordedBy == "Valéria Fagundes")
+```
+Aqui tiramos as células NA ou vazias das colunas de dia, ordem e espécie.
+```
 ```
 #### Teste de plots
 Primeiro vamos configurar a data (alguns dados não tem dia e nem mês, não vai rolar).
@@ -76,20 +87,271 @@ Agora o gŕafico.
 ```
 pacman::p_load(ggside, stringr) 
 
-ggplot(p2, aes(x = Altitude, y = CodSp, colour = RecordedBy)) + 
+ggplot(p2, aes(x = Altitude, y = CodSp, colour = Locality)) + 
   geom_jitter(size = 6, alpha = 0.4) +
-  geom_violin(aes (Colour = Species), orientation = "y", alpha = 0.5) + 
+  #geom_violin(aes (Colour = Species), orientation = "y", alpha = 0.5) + 
   #geom_xsidedensity(aes(y = after_stat(scaled), group = RecordedBy, fill = RecordedBy),alpha = 0.5, size = 2, position = "stack", outline.type = "full") + 
-  geom_xsideboxplot(aes(fill = RecordedBy),alpha = 0.5, orientation = "y") +
+  geom_xsideboxplot(aes(fill = Locality),alpha = 0.5, orientation = "y") +
   #facet_grid(Order~., scales = "free_y", space = "free_y") +
-  theme_classic()
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() 
 #ggsave("1.Species/Data.png",width = 10, height = 6, dpi = 300)
 ```
+## 1. Cap. 1: Gráficos
+### Gráficos exploratórios:
+Vamos ver quais bandas altitudinais foram amostradas pelo tipo de dado.
+```
+ggplot(p2, aes(x=Locality, y=Altitude, color=Data)) +  #Eixos x e y
+  geom_point(shape=21,  #Formato do marcador
+             alpha=0.5, #transparência
+             size=4, #Tamanho
+             stroke = 1,
+             position = "jitter") + #Largura do traço 
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() 
+
+#ggsave("gap.pdf",width = 8, height = 5, dpi = 600)
+
+```
+### Cluster para definir os grupos em altitude
+Cluest baseado em jaccard para definir os agrupamentos, conseidaramos aqui os dados binários.
+```
+pacman::p_load("ade4")
+
+local<-reshape2::dcast(p2, Cem ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
+local=data.frame(local, row.names=1)
+local$binário<-ifelse(local>1, 1, 0)
+localb=as.data.frame(local$binário)
+
+S <- specnumber(localb)
+localb<-data.frame(S, localb) 
+
+#local <- local %>%   subset(S > 4)
+
+d <- dist.binary(localb, method = 1, diag = FALSE, upper = FALSE) 
+#method 1 is Jaccard index (1901) S3 coefficient of Gower & Legendre
+hc <- hclust(d)               # apply hierarchical clustering 
+#par(mgp=c(1,1,0)) #exportar a imagem
+#png(filename="/home/user/Área de Trabalho/Música/5.clust_gen_pais.png",width=800,height=600) #local e tmamanho
+plot(hc, labels=localb$Altitude)    # plot the dendrogram
+#dev.off()
+```
+### Gráfico lateral
+
+Vamos a outro gráfico lateral:
+Primeiro o pacote. 
+```
+pacman::p_load(ggside, tidyverse,tidyquant,ggExtraPlot)
+p2 <- planilhatotal
+p2 <- subset(p2, !is.na(Day))
+p2 <- subset(p2, !is.na(Year))
+p2 <- subset(p2, !is.na(Order)) 
+p2 <- subset(p2, !is.na(Species))
+p2 <- subset(p2, !is.na(Altitude)) 
+p2 <- subset(p2, R == "y")
+
+```
+Agora o gráfico, considerando a abundância:
+```
+p4 <-p2 %>%
+  ggplot(aes(Altitude, Species, color = Order)) +
+  geom_violin(alpha = 0.8) +
+  geom_boxplot() +
+  #geom_smooth(aes(color = NULL), se=TRUE) +
+  geom_xsidedensity(aes(y = after_stat(count),
+    fill = Order),alpha = 0.5,size = 1, position = "stack") +
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() +
+  labs(title = "Altitudinal distribution", subtitle = "",
+       x = "Altitude", y = "Species") +  theme(ggside.panel.scale.x = 0.2, ggside.panel.scale.y = 0.2)
+plot(p4)
+#ggsave("overlap.pdf",width = 12, height = 8, dpi = 600)
+#geom_ysidedensity(aes(x = after_stat(density),
+    #fill = Order),alpha = 0.5,size = 1, position = "stack") +
+```
+Testar geon_density
+
+
+### Valores de diversidade
+Vamos calcular ínideces de riqueza, abundância e estimativa de riqueza para os subgrupos.
+
+#### Gráfico de acumulação
+Primeiro um gráfico de aculação de espécie por altitude
+
+```
+acum<-reshape2::dcast(p2, Altitude ~ Species, value.var = "individualCount", fun = sum)
+acum=data.frame(acum, row.names=1)
+
+sp4<-specaccum(acum,method="collector")
+shannon<-diversity(acum)
+spAbund<-rowSums(acum)
+
+acum<-reshape2::dcast(p2, Altitude ~ Species, value.var = "individualCount", fun = sum)
+p3<-data.frame(shannon,spAbund,sp4$sites,sp4$richness,acum)
+```
+E plotar
+```
+ggplot(p3, aes(x = sp4.richness, y = Altitude)) + 
+  geom_line(size=6, alpha=0.6, color="Gray") + #geom_line(aes(group = sp4.sites))
+  geom_point(aes(size=spAbund), alpha=0.3) +
+  geom_label_repel(aes(label = sp4$richness), size=4, alpha=0.8, #funciona no zoom
+                   box.padding   = 0.35, 
+                   point.padding = 0.75,
+                   segment.color = 'grey50') +
+  scale_size(range = c(.1, 24), name="Abundance") +
+  #geom_text(aes(label = a$sp4.richness),col = 'black',size = 5) +
+  labs(title="", subtitle="Total", y="Altitude",x="Richness", caption="",
+       color = "", size = "Abundance") +
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 14)) + 
+  scale_color_tq() +
+  scale_fill_tq() +
+  theme_tq() 
+  
+#ggsave("Acum2.pdf",width = 14, height = 6, dpi = 600)
+```
+#### Estimativa de riqueza
+Agora a estimativa de riqueza
+
+```
+p3<-reshape2::dcast(p2, Altitude ~ Species, value.var = "individualCount", fun = sum)
+p3=data.frame(p3, row.names=1)
+
+pool<-specpool(p3)
+pool
+
+pool <- poolaccum(p3)
+#summary(pool, display = "jack1")
+plot(pool)
+
+```
+Agora por grupos. Pode seer:
+
+- Locality;
+- Band;
+- Group;
+- Order.
+
+```
+#p3 <- subset(Data, Empresa == "XXX")
+
+p3<-reshape2::dcast(Date, Date + Order ~ Species, value.var = "individualCount", fun = sum)
+excluir <- c("Date", "Order")
+p3 <- p3[,!(names(p3)%in% excluir)]
+p4<-reshape2::dcast(Date, Date + Order ~ Class, value.var = "individualCount", fun = sum)
+
+pool<-specpool(p3, p4$Order) 
+pool
+
+boxplot(pool$chao) 
+
+```
+Agora um gráfico unificado.
+
+```
+local<-reshape2::dcast(p2, Species ~ Order, value.var = "individualCount", fun.aggregate = sum)
+local=data.frame(local, row.names=1)
+
+# Mude o q para 1 para comparar a diversidade de Shannon e para 2 para Simpson
+
+out <- iNEXT(local, q = 0,
+             datatype = "abundance",
+             size = seq(0, 800, length.out=20))
+
+R <- ggiNEXT(out, type = 1) +
+  theme_bw() +
+  labs(fill = "Áreas") +
+  #xlab("Riqueza) + 
+  #ylab("Tempo") +
+  scale_shape_manual(values = 0:19) +
+  theme_classic() +
+  theme(axis.title = element_text(size = 18), 
+        axis.text = element_text(size = 14), legend.position="bottom")
+
+R
+```
+#### Tabela de dados ecológicos
+
+Vamos adicionar a tabela nova:
+```
+pacman::p_load(openxlsx) 
+caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/gradientealt.xlsx"
+dados.clip <- read.xlsx(caminho.do.arquivo, #local do arquivo
+                           sheet = 3, # em qual planilha estão os dados
+                           colNames = T, # as colunas dos dados possuem nomes?
+                           na.strings = "NA") # como estão identificados os dados omissos?
+
+head(dados.clip)
+```
+E vamos selecionar
+```
+dados.clip <- dados.clip[1:16, ]
+colnames(dados.clip) <- make.unique(names(dados.clip))
+```
+Vamos ver em gráfico, para o primeiro tiramos as legendas.
+```
+g1 <- ggplot(dados.clip, aes(x = Area, y = Richness)) + #size colocar outro dado
+  geom_label_repel(aes(label = Locality), size=4, alpha= 0.7, #funciona no zoom
+                   box.padding   = 0.35, 
+                   point.padding = 0.75,
+                   segment.color = 'grey50') +
+  geom_point(aes(colour = Altitude_range, size = Sampling.Effort), alpha=0.6) +
+  scale_size(range = c(2, 18), name = "Sampling Effort") +
+  geom_smooth(method = lm,se = FALSE, alpha = 0.6) +  #method = lm ou loess
+  facet_grid(.~dados.clip$Factor.1, scales = "free_x", space = "free_x") + 
+  scale_fill_tq() +
+  theme_tq() +
+  labs(title="", subtitle="", #Species richness, shannon diversity and sampling effort (trap-nights) by altitude for tratament groups
+       y="Richness",x="Area (km²)", caption="",
+       color = "Altitude Range (.100)",
+       size = "Sampling Effort")
+  #theme(legend.position = "none")
+  #theme_classic()
+
+g1
+
+ggsave("grupo3.pdf",width = 11, height = 7, dpi = 6000)
+```
+e outro com legendas.
+```
+g2 <- ggplot(dados.clip, aes(x = Mean.Altitude, y = Richness)) + #size colocar outro dado
+  geom_label_repel(aes(label = Locality), size=4, alpha= 0.7, #funciona no zoom
+                   box.padding   = 0.35, 
+                   point.padding = 0.75,
+                   segment.color = 'grey50') +
+  geom_point(aes(color = Altitude_range, size = Sampling.Effort), alpha=0.6) +
+  scale_size(range = c(2, 18), name = "Sampling Effort") +
+  geom_smooth(method = loess,se = FALSE, alpha = 0.6) +  #method = lm ou loess
+  facet_grid(.~dados.clip$Factor.1, scales = "free_x", space = "free_x") + 
+  scale_fill_tq() +
+  theme_tq() +
+  labs(title="", subtitle="", #Species richness, shannon diversity and sampling effort (trap-nights) by altitude for tratament groups
+       y="Richness",x="Mean Altitude", caption="",
+       color = "Altitude Range (.100)",
+       size = "Sampling Effort")  +
+  theme(legend.position = "none")
+
+g2
+ggsave("grupo3.pdf",width = 11, height = 7, dpi = 6000)
+
+```
+Agora um gráfico único
+```
+
+g2 / g1
+
+ggsave("grupo.pdf",width = 10, height = 13, dpi = 6000)
+```
+### Cap. 2
+
 
 ## Correlação
 Vamos testar a correlação dos dados.
 ```
-planilhatotal %>% 
+p2 %>% 
   subset(Altitude  > 0) %$% #escolher a partir dos dados (relação de alt com as anos)
   cor.test(Altitude, Year) #correlação dos dados selecionados, numéricos
 ```
@@ -105,7 +367,7 @@ Importante se atentar:
 - Relação de espécie (variável dependente);
 - #h0 = não variável/ F= diferença das médias / a variação de altitude média por espécie é de 1310m
 ```
-dicalt <- lm(p2$Altitude ~ p2$RecordedBy, data = p2) 
+dicalt <- lm(p2$Altitude ~ p2$Species, data = p2) 
 anova(dicalt) 
 ```
 Dando valor de p siginificativo os dados são considerados variados. Para ver com mais detalhes:
@@ -122,7 +384,7 @@ E a variãncia para a assembléia de espécies:
 
 Também vamos ver a relação deles com a altitude. Primeiro os pacotes:
 ```
-require(jtools,rpart,vegan)
+require(jtools,rpart)
 pacman::p_load(jtools, sandwich, lme4, ggstance)
 ```
 Agora o gráfico para as espécies.
@@ -161,26 +423,27 @@ denscomp(fit.MF.normal, addlegend=TRUE)
 ```
 
 Krustal
-
-kruskal.test(Altitude~RecordedBy, data = p2)       
+```
+kruskal.test(Altitude~Locality, data = p2)       
 
 g1 <- p2 %>% 
-  mutate(RecordedBy = as.factor(RecordedBy)) %>% 
+  mutate(RecordedBy = as.factor(Locality)) %>% 
   ggplot() +
-  geom_boxplot(aes(y = Altitude, x = RecordedBy)) +
+  geom_boxplot(aes(y = Altitude, x = Locality)) +
   labs(x = 'RecordedBy', y = 'Altitude', 
        title = 'Boxplot de consumo') + theme_classic()
        
 g1 
+```
 Fazer com as classes
-
-pairwise.wilcox.test(p3$Altitude,
-                          p3$Altitude,
+```
+pairwise.wilcox.test(p2$Cem,
+                          p2$Cem,
                           p.adjust.method="bonferroni")
 
 pacman::p_load("ade4")
 
-local<-reshape2::dcast(p2, Altitude ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
+local<-reshape2::dcast(p2, Cem ~ Species) #, value.var = "Kingdom", fun.aggregate = NULL)
 local=data.frame(local, row.names=1)
 #local$binário<-ifelse(local>1, 1, 0)
 #localb=as.data.frame(local$binário)
@@ -198,14 +461,18 @@ hc <- hclust(d)               # apply hierarchical clustering
 plot(hc, labels=localb$Altitude)    # plot the dendrogram
 #dev.off()
 
+```
 
 
-### Diversidade + Acumulação
-Fazer
 
 
-#### Riqueza Estimada
-Fazer
+
+
+
+
+
+
+
 
 ### Gráficos exploratórios:
 Vamos ver quais bandas altitudinais foram amostradas:
@@ -222,8 +489,9 @@ ggplot(p2, aes(x=Locality, y=Altitude, color=Data)) +  #Eixos x e y
 ```
 E sua abrangência por espécies:
 ```
-ggplot(planilhatotal, aes(x=Altitude, y=Species)) +  #Eixos x e y
+ggplot(p2, aes(x=Altitude, y=Species)) +  #Eixos x e y
   geom_boxplot(aes(colour=Order)) +
+  #geom_jitter(aes(colour=Order)) +
   #geom_xsidedensity(aes(fill = Order, y = after_stat(count)), position = "stack") +
   geom_xsidedensity(aes(y = after_stat(count/max(count)*5), group = Order, fill = Order),alpha = 0.5, size = 1, position = "stack") + 
   theme_classic()  
@@ -257,63 +525,13 @@ e Boxplot:
 p3 <- ggMarginal(p, type="boxplot")
 p3
 ```
-Vamos a outro gráfico lateral:
-Primeiro o pacote. 
-```
-pacman::p_load(ggside, tidyverse,tidyquant,ggExtraPlot)
-planilha <- p2
-```
-Agora o gráfico, considerando a abundância:
-```
-p4 <-planilha %>%
-  ggplot(aes(Altitude, Species, color = Order)) +
-  geom_boxplot() +
-  geom_smooth(aes(color = NULL), se=TRUE) +
-  geom_xsidedensity(aes(y = after_stat(count),
-    fill = Order),alpha = 0.5,size = 1, position = "stack") +
-  scale_color_tq() +
-  scale_fill_tq() +
-  theme_tq() +
-  labs(title = "Altitudinal distribution", subtitle = "",
-       x = "Altitude", y = "Species") +  theme(ggside.panel.scale.x = 0.2, ggside.panel.scale.y = 0.2)
-plot(p4)
-#ggsave("overlap.png",width = 12, height = 8, dpi = 600)
-#geom_ysidedensity(aes(x = after_stat(density),
-    #fill = Order),alpha = 0.5,size = 1, position = "stack") +
-```
-Vamos adicionar a tabela nova:
-```
-pacman::p_load(openxlsx) 
-caminho.do.arquivo <- "/home/user/Área de Trabalho/Bio/projeto_publ/gradientealt.xlsx"
-dados.clip <- read.xlsx(caminho.do.arquivo, #local do arquivo
-                           sheet = 3, # em qual planilha estão os dados
-                           colNames = T, # as colunas dos dados possuem nomes?
-                           na.strings = "NA") # como estão identificados os dados omissos?
 
-head(dados.clip)
-```
-E vamos selecionar
 
-`dados.clip <- dados.clip[1:16, ]`
 
-Vamos ver em gráfico:
-```
-ggplot(dados.clip, aes(x = Shannon, y = Richness)) + #size colocar outro dado
-  geom_label_repel(aes(label = Locality), size=4, alpha= 0.7, #funciona no zoom
-                   box.padding   = 0.35, 
-                   point.padding = 0.75,
-                   segment.color = 'grey50') +
-  geom_point(aes(colour = Altitude.range, size = Sampling.Effort), alpha=0.6) +
-  facet_grid(.~dados.clip$Factor) + 
-  labs(title="Species richness, shannon diversity and sampling effort (trap-nights) by altitude for tratament groups", subtitle="", 
-       y="Richness",x="Shanon Index", caption="",
-       color = "Altitude Range",
-       size = "Sampling Effort") +
-  theme(axis.title = element_text(size = 18), axis.text = element_text(size = 14))+
-  theme_classic()
-  
-#ggsave("grupo.png",width = 9, height = 5, dpi = 600)
-```
+
+
+
+
 ### Gif
 
 pacman::p_load(gganimat,ggplot2,dplyr,gapminder,ggthemes,gifski,readr,tidyr,cargo, rustc)
@@ -446,6 +664,74 @@ plot_summs(fit, scale = TRUE, plot.distributions = TRUE, inner_ci_level = .9)
 dados.clip %>% 
   subset(Richness >= 0) %$% #escolher a partir dos dados (relação de alt com as anos)
   cor.test(Richness, Sampling.Effort) # 0- baixa xorrelação / 1- alta correlação
+```
+Acumulação
+
+```
+
+acum<-reshape2::dcast(Date, Date ~ Species, value.var = "Abundance", fun.aggregate = sum)
+acum=data.frame(acum, row.names=1)
+
+acumplot<-specaccum(acum) #dados de acumulação
+plot(acumplot) #curva simples
+plot(acumplot,ci.type="poly",col="black",lwd=2,ci.lty=0,ci.col="lightgrey",ylab="Riqueza",
+     xlab="Dias de amostragem",main="Curva de acumulação de registros",las=1,font=1.5,font.lab=1.5,cex.lab=1,cex.axis=1) #curva clássica
+
+
+acum<-reshape2::dcast(Date, Date ~ Species, value.var = "Abundance", fun = sum)
+acum=data.frame(acum, row.names=1)
+sp1<-specaccum(acum,method="rarefaction")
+sp2<-specaccum(acum,method="exact")
+sp3<-specaccum(acum,method="random")
+sp4<-specaccum(acum,method="collector")
+
+par(mfrow=c(2,2)) 
+plot(sp1, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="lightblue",xlab="Dias de amostragem",ylab="Rarefação")
+plot(sp2, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="lightgrey",xlab="Dias de amostragem",ylab="Riqueza Esperada")
+plot(sp3, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="yellow",xlab="Dias de amostragem",ylab="Sítios Aleatórios")
+plot(sp4, ci.type="poly", col="black", lwd=2, ci.lty=0, ci.col="lightblue",xlab="Dias de amostragem",ylab="Curva do Coletor")
+par(mfrow=c(1,1))
+
+
+
+sp4<-specaccum(acum,method="collector")
+shannon<-diversity(acum)
+spAbund<-rowSums(acum)
+
+acum<-reshape2::dcast(Date, Date ~ Species, value.var = "Abundance", fun = sum)
+p3<-data.frame(acum, shannon,spAbund,sp4$sites,sp4$richness)
+
+ggplot(p3, aes(x = Date, y = sp4.richness)) + 
+  geom_line(color="Gray") + 
+  geom_point(aes(size=spAbund, colour=spAbund), alpha=0.3) +
+    geom_label_repel(aes(label = sp4$richness), size=4, alpha=0.8, #funciona no zoom
+                   box.padding   = 0.35, 
+                   point.padding = 0.75,
+                   segment.color = 'grey50') +
+  scale_size(range = c(.1, 24), name="Abundance") +
+  #geom_text(aes(label = a$sp4.richness),col = 'black',size = 5) +
+  labs(title="Collector curve", subtitle="Total", y="Richness",x="Date", caption="",
+       color = "Abundance", size = "Abundance") +
+  theme(axis.title = element_text(size = 18),
+        axis.text = element_text(size = 14)) + theme_classic() 
+#ggsave("Acum2.png",width = 14, height = 6, dpi = 300)
+
+
+p3<-reshape2::dcast(Date, Date ~ Species, value.var = "Abundance", fun = sum)
+p3=data.frame(p3, row.names=1)
+pool<-specpool(p3)
+pool
+
+#p3 <- subset(Data, Empresa == "XXX")
+
+p3<-reshape2::dcast(Date, Date + Order ~ Species, value.var = "Abundance", fun = sum)
+excluir <- c("Date", "Order")
+p3 <- p3[,!(names(p3)%in% excluir)]
+p4<-reshape2::dcast(Date, Date + Order ~ Class, value.var = "Abundance", fun = sum)
+
+pool<-specpool(p3, p4$Order) 
+pool
+boxplot(pool$chao) 
 
 ```
 
