--- a/2023_06_jaiany.md
+++ b/2023_06_jaiany.md
@@ -21,9 +21,10 @@ Vamos instalar logo vários pacotes que possivelmente utilizaremos para selecion
 ```
 if(!require(pacman, quietly = TRUE))(install.packages("pacman")) #agrupador de funções
 pacman::p_load(magrittr,dplyr,reshape2) #magrittr para operações de pipe/dplyr para manipulador de dados
-pacman::p_load(ggplot2, ggrepel, graphics,lubridate, gghighlight) #devtools, 
+pacman::p_load(ggplot2, ggrepel, graphics,lubridate, gghighlight, patchwork) #devtools, 
 pacman::p_load(vegan)  #vegan para estatística ecológica/graphics para os gráficos
 ```
+
 #### Caregar Planilha
 ```
 pacman::p_load(openxlsx) 
@@ -61,7 +62,7 @@ pbase <- Data
 
 ```
 ## 2. Normalidade
-## 2. Normalidade
+
 Primeiro o pacote para isso.
 ```
 pacman::p_load(fitdistrplus)
@@ -71,7 +72,7 @@ Teste de normalidade por coluna para ver se a variável segue essa distribuiçã
 ```
 p3 <- subset(p2, Experimento == "SM")
 
-fit.MF.normal <- fitdist(p3$Consumo, "norm") #gráfico de distribuição normal
+fit.MF.normal <- fitdist(p3$Vestígios.de.atividade, "norm") #gráfico de distribuição normal
 plot(fit.MF.normal)
 ```
 Podemos isolar o gráfico Q-Q Plot. Basicamente, um gráfico Q-Q é um gráfico de dispersão criado com a 
@@ -79,26 +80,26 @@ ajuda do uso de unidades de quantis em relação um ao outro. Se cada unidade de
 distribuição idêntica, temos que ver os fatores formando uma linha que é mais ou menos reta. 
 Também e adicionar variáveis:
   ```  
-ggplot(p2, aes(sample=Consumo, colour = Colonia)) +
+ggplot(p2, aes(sample=Vestígios.de.atividade, colour = Colônias.experimentais)) +
   facet_grid(Experimento~., scales = "free_y", space = "free_y") +
   stat_qq() + 
   theme_bw()
 ```
 Para garantir é fazendo um teste de Shapiro Wilk.  Para dizer que uma distribuição é normal, o valor p precisa ser maior do que 0,05.
 ```
-p3 <- subset(p2, Experimento == "SM")
+p3 <- subset(p2, Experimento == "PM")
 
-shapiro.test(p3$Consumo) 
+shapiro.test(p3$Vestígios.de.atividade) 
 ```
 Nesse caso fica claro que a variável não é normal para ambos os experimentos, segue:
 - experimento 1
 Shapiro-Wilk normality test
-data:  p3$Consumo
+data:  p3$Vestígios.de.atividade
 W = 0.87658, p-value = 1.04e-07
 
 - experimento 2
 Shapiro-Wilk normality test
-data:  p3$Consumo
+data:  p3$Vestígios.de.atividade
 W = 0.72871, p-value < 2.2e-16
 
 ## 3. Variabilidade
@@ -111,83 +112,86 @@ pacman::p_load(ggside, stringr) #, tidyverse,tidyquant)
 
 Primeiro para os dois tipos de experimentos, vamos calcular e plotar.
 ```
-kruskal.test(Consumo~Experimento, data = p2)       
+kruskal.test(Vestígios.de.atividade~Experimento, data = p2)       
 
 g1 <- p2 %>% 
   mutate(Experimento = as.factor(Experimento)) %>% 
   ggplot() +
-  geom_boxplot(aes(y = Consumo, x = Experimento)) +
-  labs(x = 'Experimento', y = 'Consumo', 
-       title = 'Boxplot de consumo') + theme_classic()
+  geom_boxplot(aes(y = Vestígios.de.atividade, x = Experimento)) +
+  labs(x = 'Experimento', y = 'Vestígios de atividade', 
+       title = '') + theme_classic()
        
 g1 
 
-ggsave(, width = 20, height = 10, device = "png", filename = "veg", plot = g1)
+ggsave(, width = 20, height = 10, device = "pdf", filename = "2023_10_20_k-w", plot = g1)
 
 ```
 Percebe-se que entre os experimentos p deu significativo, ou seja, rejeitamos a hipótese nula que os experimentos são iguais (mas por muito pouco. 
 
 Kruskal-Wallis rank sum test
-data:  Consumo by Experimento
+data:  Vestígios.de.atividade by Experimento
 Kruskal-Wallis chi-squared = 8.0198, df = 1, p-value = 0.004627
 
 
 Agora vamos ver as colônias, primeiro vamos plotar
 ```
 g2 <- p2 %>% 
-  mutate(Colonia = as.factor(Colonia)) %>% 
+  mutate(Colônias.experimentais = as.factor(Colônias.experimentais)) %>% 
   ggplot() +
   facet_grid(.~Experimento, scales = "free_x", space = "free_x") +  
-  geom_boxplot(aes(y = Consumo, x = Colonia)) +
-  labs(x = 'Experimento', y = 'Consumo', 
-       title = 'Boxplot de consumo') + theme_classic()
+  geom_boxplot(aes(y = Vestígios.de.atividade, x = Colônias.experimentais)) +
+  labs(x = 'Experimento', y = 'Vestígios de atividade', 
+       title = '') + theme_classic()
 
 g2
 
-ggsave(, width = 20, height = 10, device = "png", filename = "veg", plot = g2)
+ggsave(, width = 20, height = 10, device = "pdf", filename = "2023_10_20_k-w-total", plot = g2)
   
 ```
 Agora vamos ver se há diferenças significativas por colônias.
 ```
 p3 <- subset(p2, Experimento == "2")
 
-kruskal.test(Consumo~Colonia, data = p3)       
+kruskal.test(Vestígios.de.atividade~Colônias.experimentais, data = p3)       
 ```
 E um gráfico só para as categorias do segundo experimeto.
 ```
 p3 <- subset(p2, Experimento == "SM")
 
-kruskal.test(Consumo~Categoria, data = p3)       
+kruskal.test(Vestígios.de.atividade~Categoria, data = p3)       
 
-g1 <- p3 %>% 
+g3 <- p3 %>% 
   mutate(Experimento = as.factor(Categoria)) %>% 
   ggplot() +
-  geom_boxplot(aes(y = Consumo, x = Categoria)) +
-  labs(x = 'Tratamento', y = 'Consumo', 
-       title = 'Boxplot de consumo') + theme_classic()
+  geom_boxplot(aes(y = Vestígios.de.atividade, x = Categoria)) +
+  labs(x = 'Tratamento', y = 'Vestígios de atividade', 
+       title = '') + theme_classic()
        
-g1 
+g3 
 
-ggsave(, width = 20, height = 10, device = "tiff", filename = "veg", plot = g1)
+ggsave(, width = 20, height = 10, device = "pdf", filename = "2023_10_20_PM", plot = g1)
+
+g4 <- g1 + g3
+ggsave(, width = 20, height = 10, device = "pdf", filename = "2023_10_20_exp1-2", plot = g4)
 
 ```
-Vamos ver o resultado. Para o experimento 1 não houve diferença estatística entre as colonias.
+Vamos ver o resultado. Para o experimento 1 não houve diferença estatística entre as Colônias.experimentaiss.
 
 Kruskal-Wallis rank sum test
-data:  Consumo by Colonia
+data:  Vestígios.de.atividade by Colônias.experimentais
 Kruskal-Wallis chi-squared = 4.4873, df = 2, p-value = 0.1061
 
-Mas entre as colonias do experimento 2 houve diferença>
+Mas entre as Colônias.experimentaiss do experimento 2 houve diferença>
 
 Kruskal-Wallis rank sum test
-data:  Consumo by Colonia
+data:  Vestígios.de.atividade by Colônias.experimentais
 Kruskal-Wallis chi-squared = 67.507, df = 5, p-value = 3.38e-13
 
-Mas para ver quais colonias do experimento 2 houve diferença, vamos fazer um Maa-Whitney.
+Mas para ver quais Colônias.experimentaiss do experimento 2 houve diferença, vamos fazer um Maa-Whitney.
 
 ```
-pairwise.wilcox.test(p3$Consumo,
-                          p3$Colonia,
+pairwise.wilcox.test(p3$Vestígios.de.atividade,
+                          p3$Colônias.experimentais,
                           p.adjust.method="bonferroni")
 ```
 Notamos que C1-C2, C1-S1, C1-S2, C2-S1, C2-S2, C2-S3, C3-S2, S1-S2 3 S2-S3 são iguais, mas C1-C3, C1-S3, C2-C3, C3-S1, C3- S2, S1-S3 são estatisticamente diferentes.
@@ -199,4 +203,19 @@ S1 1.0000  1.0000  5.5e-07 -      -
 S2 0.0067  1.0000  8.3e-06 0.3590 -     
 S3 1.8e-05 0.0188  0.0882  0.0014 0.1739
 
+p2 <- pbase
 
+g1 <- ggplot(p2, aes(Colônias.experimentais)) +
+ geom_bar(aes(weight = N.Crânios)) +
+ facet_grid(.~Experimento, scales = "free_x", space = "free_x") +
+ geom_line(aes(x = Colônias.experimentais, y = Consumo*30, group=1), colour = "red") +
+ geom_label(aes(y = Consumo*30, label = Consumo_label), size=4, alpha=0.8, #funciona no zoom
+                   box.padding   = 0.35, 
+                   point.padding = 0.75,
+                   segment.color = 'grey50') +
+ labs(x = 'Colônias', y = 'Consumo de peças ósseas', 
+       title = '') + theme_classic()
+
+g1 
+
+ggsave(, width = 20, height = 10, device = "pdf", filename = "2023_10_20_consumototal", plot = g1)
